<resources>
    <string name="app_name">图像处理</string>
    <string name="app_name21">GraduationProject</string>
    <string name="todo">TODO</string>
    <string name="choose">从文件夹中选择</string>
    <string name="take">拍一张照片</string>
    <string name="save">保存</string>
    <string name="cancel">重置</string>
    <string name="one">第一项</string>
    <string name="recyclerview">RecyclerView悬浮条</string>
    <string name="sketchpad">Android画板</string>
    <string name="price">曲线图带头像和价格</string>
    <string name="shape">各种形状的View</string>
    <string name="recyclerview_refresh">recyclerview的添加和刷新</string>
    <string name="sketchpad_width">画笔宽度</string>
    <string name="sketchpad_color">画笔颜色</string>
    <string name="rubber">橡皮</string>
    <string name="clean">清除</string>
    <string name="undo">撤销上次操作</string>
    <string name="confirm">确定</string>
    <string name="red">红</string>
    <string name="purple">紫</string>
    <string name="green">绿</string>
    <string name="blue">蓝</string>
    <string name="yellow">黄</string>
    <string name="black">黑</string>
    <string name="load">上拉加载更多</string>
    <string name="paint">画笔粗细</string>
    <string name="chexiao">撤销上一步操作</string>
</resources>
