<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:background="#CFCFCF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="vertical">

  <RadioGroup
      android:id="@+id/group"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="30dp">
      <RadioButton
          android:layout_gravity="center_vertical"
          android:layout_width="50dp"
          android:layout_marginLeft="15dp"
          android:textColor="@color/black"
          android:text="@string/black"
            android:id="@+id/normal"
          android:layout_height="20dp"
          android:layout_marginStart="15dp" />

      <RadioButton
          android:layout_gravity="center_vertical"
          android:layout_width="50dp"
          android:layout_marginLeft="10dp"
          android:text="@string/red"
          android:textColor="@color/red"
          android:layout_height="20dp"
          android:layout_marginStart="10dp" />

      <RadioButton
          android:layout_gravity="center_vertical"
          android:layout_width="50dp"
          android:layout_marginLeft="10dp"
          android:text="@string/yellow"
          android:textColor="@color/yellow"
          android:layout_height="20dp"
          android:layout_marginStart="10dp" />

      <RadioButton
          android:layout_gravity="center_vertical"
          android:layout_width="50dp"
          android:layout_marginLeft="10dp"
          android:text="@string/blue"
          android:textColor="@color/blue"
          android:layout_height="20dp"
          android:layout_marginStart="10dp" />
      <RadioButton
          android:layout_gravity="center_vertical"
          android:layout_width="50dp"
          android:layout_marginLeft="10dp"
          android:text="@string/green"
          android:textColor="@color/green"
          android:layout_height="20dp"
          android:layout_marginStart="10dp" />
      <RadioButton
          android:layout_gravity="center_vertical"
          android:layout_width="50dp"
          android:layout_marginLeft="10dp"
          android:text="@string/purple"
          android:textColor="@color/purple"
          android:layout_height="20dp"
          android:layout_marginStart="10dp" />
  </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="10sp"
            android:text="@string/paint"
            tools:ignore="SmallSp" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:max="100"
            android:progress="50"
            android:id="@+id/seekFive"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textSize="9sp"

        android:text="@string/chexiao"
        tools:ignore="SmallSp" />
</LinearLayout>