<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.westbrook.graduationproject.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/pic"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="350dp"
            android:contentDescription="@string/todo" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <Button
                android:text="@string/save"
                android:id="@+id/button_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/button_two"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
